feat: config photo profile cloudinary

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:password@localhost:3306/portofolio"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dkv0kddgy"
+NEXT_PUBLIC_CLOUDINARY_API_KEY="362833623332837"
+NEXT_PUBLIC_CLOUDINARY_API_SECRET="Yja0qYCrYCHh_eMLqxdACgYFEbs"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="upload_images"
