feat: navbar & hero section

--- a/.env
+++ b/.env
@@ -9,4 +9,7 @@ DATABASE_URL="mysql://root:password@localhost:3306/portofolio"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dkv0kddgy"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="362833623332837"
 NEXT_PUBLIC_CLOUDINARY_API_SECRET="Yja0qYCrYCHh_eMLqxdACgYFEbs"
-NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="upload_images"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="portofolio"
+
+NOTION_TOKEN="secret_xr1W9p0tjTpGsGaSDaYR0xKKtoGxxKLNB6EiyPOoiC9"
+NOTION_DATABASE_ID="367a643a116949eba2de29f408409d08"
