--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@notion-render/client": "^0.0.2",
+    "@notionhq/client": "^2.2.15",
     "@prisma/client": "^5.15.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.9",
@@ -21,15 +24,20 @@
     "clsx": "^2.1.1",
     "formidable": "^3.5.1",
     "lucide-react": "^0.411.0",
-    "multer": "^1.4.5-lts.1",
     "next-cloudinary": "^6.6.2",
     "next-connect": "^1.0.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-spinners": "^0.14.1",
     "sha1": "^1.1.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
