--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:password@localhost:3306/portofolio"
+DATABASE_URL="mysql://root:root@localhost:3306/portofolio"
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dkv0kddgy"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="362833623332837"
